api接口实体类